--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,6 +18,7 @@ langchain-core>=0.1.0
 
 # Google APIs
 google-auth==2.23.4
+google-generativeai>=0.3.0
 
 # Vector Databasechromadb>=0.4.0
 sentence-transformers>=2.2.0
@@ -25,6 +26,13 @@ sentence-transformers>=2.2.0
 # Image Processing
 Pillow>=10.0.0
 opencv-python>=4.5.0
+
+# Medical Imaging Libraries (for 3D visualization)
+monai>=1.2.0; python_version >= "3.8"  # Optional but recommended
+nibabel>=5.0.0; python_version >= "3.8"  # Optional fallback
+pydicom>=2.4.0; python_version >= "3.8"  # Optional fallback
+SimpleITK>=2.2.0; python_version >= "3.8"  # Optional fallback
+torch>=2.0.0; python_version >= "3.8"  # Required for MONAI
 
 # PDF Generation
 reportlab>=4.0.0
