--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.1.11",
     "appwrite": "^18.2.0",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
+    "plotly.js-dist-min": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "react-plotly.js": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/leaflet": "^1.9.20",
+    "@types/plotly.js": "^3.0.3",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-plotly.js": "^2.6.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^9.9.1",
