--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.7",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/jspdf": "^1.3.3",
     "appwrite": "^18.2.0",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.344.0",
     "plotly.js-dist-min": "^3.1.0",
